# fastapi-churn-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
data/: churn_dataset.csv
src/churn_service/: dependencies.py  main.py
src/churn_service/api/v1/: dataset.py  health.py  model.py  predict.py  router.py
src/churn_service/core/: config.py  error_handlers.py  exceptions.py  logging.py
src/churn_service/schemas/: dataset.py  features.py  health.py  history.py  model.py  prediction.py  training.py
src/churn_service/services/: dataset.py  model_schema.py  model_storage.py  pipeline.py  prediction.py  preprocessing.py  training.py  training_history.py
tests/: conftest.py
tests/integration/: test_dataset.py  test_e2e.py  test_error_format.py  test_health.py  test_model.py  test_model_metrics.py  test_model_schema.py  test_model_status.py  test_predict.py
tests/unit/: test_dataset_service.py  test_dependencies.py  test_model_storage_service.py  test_pipeline.py  test_prediction_service.py  test_preprocessing_service.py  test_schemas.py  test_training_history_service.py  test_training_service.py
